Fix SEGV in Bug691538.pdf.

Local testing with:
  gs -dNOGC -Z@? -r300 -sDEVICE=pbmraw -dMaxBitmap=30000000 -o nul: ..\ghostpcl\tests_private\comparefiles\Bug691538.pdf

shows a SEGV on windows with a debug build. Removing the reference
decrement solves it and doesn't show any leaks.

Oddly the cluster doesn't show the SEGV any more, but it did previously.